<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="ok_15">Ok(15%)</string>
    <string name="do_you_want_to_round_the_tip">Do you want to round the tip</string>
    <string name="calculate">calculate</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="tip_result">Tip Amount:%s</string>
</resources>